--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-11.16MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-974.5KB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇻🇳 越南-1.29MB/s(Youtube:不良林), server: hcmn4.sos4g.xyz, port: 80, type: vmess, uuid: 88feb3a4-8dd9-4001-91d6-9cceabca5a4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /sos4g.xyz, ws-headers: {Host: hcmn4.sos4g.xyz}}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇸🇬 新加坡-347.1KB/s(Youtube:不良林), server: 194.124.35.40, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-464.2KB/s(Youtube:不良林), server: 194.124.35.40, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-418.7KB/s(Youtube:不良林), server: 194.124.35.48, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 2523fe1a-1295-4525-be2c-d78ff1465d2a, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇸🇬 新加坡-252.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 20.24.200.112, port: 12377, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-591.8KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇸🇬 新加坡-806.8KB/s(Youtube:不良林), server: 217.197.161.164, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-252.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-347.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-418.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-806.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
