--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.70MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-240.9KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-988.0KB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-660.8KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-228.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-972.8KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-367.6KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-870.6KB/s(Youtube:不良林), server: 14.152.92.80, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-988.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-394.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
